syntax = "proto3";

package borealis.v1beta1;

option go_package = "/proto";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "shared.proto";

service Activities {
  rpc GetProfile(GetProfileRequest) returns (GetProfileResponse) {
    option (google.api.http) = {
      post: "/v0/activities/GetProfile"
      body: "*"
    };
  }

  rpc GetTopQueries(GetTopQueriesRequest) returns (GetTopQueriesResponse) {
    option (google.api.http) = {
      post: "/v0/activities/GetTopQueries"
      body: "*"
    };
  }

  rpc GetQueryDetails(GetQueryDetailsRequest) returns (GetQueryDetailsResponse) {
    option (google.api.http) = {
      post: "/v0/activities/GetQueryDetails"
      body: "*"
    };
  }
}

message GetProfileRequest {
  google.protobuf.Timestamp period_start_from = 1;
  google.protobuf.Timestamp period_start_to = 2;
  string cluster_name = 3;
}

message GetProfileResponse {
  map<string, Trace> traces = 1;
  float current_cpu_cores = 4;
}

message Trace {
  repeated google.protobuf.Timestamp x_values_timestamp = 1;
  repeated float x_values_float = 4;
  repeated string x_values_string = 5;
  repeated float y_values_float = 2;
  string color = 6;
}

message QueriesMetrics {
  map<string, MetricValues> metrics = 1;
}

message QueryMetadata {
  string fingerprint = 1;
  repeated string parameters = 2;
  string text = 3;
  repeated string examples_text = 4;
  repeated string plans_id = 5;
  string database = 6;
}

message GetTopQueriesRequest {
  google.protobuf.Timestamp period_start_from = 1;
  google.protobuf.Timestamp period_start_to = 2;
  string cluster_name = 3;
}

message GetTopQueriesResponse {
  map<string, Trace> traces = 1;
  map<string, QueriesMetrics> queries_metrics = 2;
  map<string, QueryMetadata> queries_metadata = 3;
}

message GetQueryDetailsRequest {
  google.protobuf.Timestamp period_start_from = 1;
  google.protobuf.Timestamp period_start_to = 2;
  string cluster_name = 3;
  string query_id = 4;
}

message GetQueryDetailsResponse {
  map<string, Trace> traces = 1;
}

